Supplier Form scrollbar created & button section position fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@ body{
     margin: 0;
     padding:0;
     font-family: "Open Sans", sans-serif;
-    /* height: fit-content ;
-    width: fit-content ; */
 }
 
 @tailwind base;
